# CM4

./: .gitignore  CMakeLists.txt  MANIFEST.in  build_f2py_cm4.py  example.py  example_math.f90  meson.build  practice1.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: ci-c_wrapper.yml  py_version.yml
CM4/: README.md  Unittests.py  __init__.py  __init__py  callfpy.py  cm4field.f  cm4field_.F  cm4field_array.F  f2py_code.py  fort.50  fortran_CM4_test_values.txt  hello.f90  pyproject.toml  python_wrapper.py
CM4/fortran/: c_example_wrapper.c  c_wrapper.c  call_cm4field.f90  call_cm4field_array.f90  ccm4.c  cm4field_.F  cm4field_array.F  compile_wrapper.sh
CM4/lib/: Core_unittest_inputs.csv  README.md  call_cm4_from_F.F  callfpy.py  cm4field_.F  cm4field_array.F  example.py  fortran_CM4_test_values.txt  hello  interactive_cm4.f  python_wrapper.py  testvalB_magn.csv
CM4/lib/test_values/: testvalBcore.csv
CM4/test_values/: testvalB_ext.csv  testvalB_iono.csv
python_CM4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: create_cm4_results.c  generate_cm4_results.sh  test_arr_calc.py  test_ext.py  test_survey_file.py
tests/test_values/: Core_unittest_inputs.csv  out_1.txt
