[project]
name = "python_CM4"
version = "0.0.1"
description = "Python wrapper of CM4"
authors = [{name = "Collin Kadlecek", email = "collin.kadlecek@noaa.gov"}]
maintainers = [{name = "Collin Kadlecek", email = "collin.kadlecek@noaa.gov"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy=1.25.6",
    "geomaglib>=1.2.1",
    "datetime"
]
readme = "README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/CM4.git"
Repositories = "https://github.com/CIRES-Geomagnetism/CM4.git"

[tool.setuptools]
packages = ["CM4"]
