[project]
name = "python_CM4"
version = "0.0.1"
description = "Python wrapper of CM4"
authors = [{name = "Collin Kadlecek", email = "collin.kadlecek@noaa.gov"}]
maintainers = [{name = "Collin Kadlecek", email = "collin.kadlecek@noaa.gov"}]
requires-python = ">=3.9"
dependencies = ["numpy", "geomaglib>=1.2.1"]

readme = "README.md"

[build-system]
requires = ["scikit-build-core", "numpy", "cmake"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["CM4"]
cmake.minimum-version = "3.18"
cmake.verbose = true

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/CM4.git"
Repositories = "https://github.com/CIRES-Geomagnetism/CM4.git"



