[project]
name = "python_CM4"
version = "0.0.1"
description = "Python wrapper of CM4"
authors = [{name = "Collin Kadlecek", email = "collin.kadlecek@noaa.gov"}]
maintainers = [{name = "Collin Kadlecek", email = "collin.kadlecek@noaa.gov"}]
requires-python = ">=3.9"
dependencies = ["numpy", "geomaglib>=1.2.1"]

readme = "readme.md"

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project.urls]
Homepage = "https://github.pip install -vvv .com/CIRES-Geomagnetism/CM4.git"
Repositories = "https://github.com/CIRES-Geomagnetism/CM4.git"



