[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CM4"
version = "0.1.0"
description = "Python wrapper for CM4 model with Fortran integration"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = ["numpy", "scipy"]

[tool.setuptools]
packages = ["CM4"]